--- a/electricity.yaml
+++ b/electricity.yaml
@@ -1,188 +1,187 @@
-Electricity:
-  Afghanistan: 18.0
-  Albania: 9.4
-  Algeria: 2.1
-  Angola: 3.7
-  Antigua and Barbuda: 44.9
-  Argentina: 10.8
-  Armenia: 7.7
-  Australia: 20.4
-  Austria: 10.2
-  Azerbaijan: 4.8
-  Bahamas, The: 28.5
-  Bahrain: 6.0
-  Bangladesh: 9.7
-  Barbados: 26.6
-  Belarus: 14.7
-  Belgium: 16.7
-  Belize: 22.6
-  Benin: 20.7
-  Bhutan: 5.9
-  Bolivia: 17.5
-  Bosnia and Herzegovina: 11.6
-  Botswana: 16.3
-  Brazil: 17.5
-  Brunei Darussalam: 5.0
-  Bulgaria: 10.7
-  Burkina Faso: 23.8
-  Burundi: 17.3
-  Cabo Verde: 26.3
-  Cambodia: 18.2
-  Cameroon: 17.0
-  Canada: 12.3
-  Central African Republic: 10.5
-  Chad: 21.2
-  Chile: 10.2
-  China: 14.6
-  Colombia: 19.9
-  Comoros: 28.1
-  Congo, Dem, Rep,: 10.0
-  Congo, Rep,: 8.1
-  Costa Rica: 14.4
-  Côte d'Ivoire: 12.6
-  Croatia: 16.8
-  Cyprus: 19.1
-  Czech Republic: 13.8
-  Denmark: 24.2
-  Djibouti: 26.2
-  Dominica: 36.8
-  Dominican Republic: 20.1
-  Ecuador: 11.9
-  Egypt, Arab Rep,: 9.7
-  El Salvador: 19.5
-  Equatorial Guinea: 17.4
-  Estonia: 10.3
-  Eswatini: 16.5
-  Ethiopia: 3.6
-  Fiji: 21.8
-  Finland: 13.3
-  France: 13.6
-  Gabon: 19.1
-  Gambia, The: 20.2
-  Georgia: 6.6
-  Germany: 25.6
-  Ghana: 23.6
-  Greece: 20.4
-  Grenada: 30.9
-  Guatemala: 20.1
-  Guinea: 20.3
-  Guinea-Bissau: 27.3
-  Guyana: 32.8
-  Haiti: 21.1
-  Honduras: 20.8
-  Hong Kong, China: 16.1
-  Hungary: 18.0
-  Iceland: 12.2
-  India: 18.2
-  Indonesia: 10.9
-  Iran, Islamic Rep,: 5.2
-  Iraq: 8.5
-  Ireland: 19.0
-  Israel: 11.8
-  Italy: 16.8
-  Jamaica: 26.4
-  Japan: 21.2
-  Jordan: 24.6
-  Kazakhstan: 4.4
-  Kenya: 21.7
-  Kiribati: 41.3
-  Korea, Rep,: 11.4
-  Kosovo: 9.5
-  Kuwait: 0.7
-  Kyrgyz Republic: 3.6
-  Lao PDR: 13.2
-  Latvia: 11.4
-  Lebanon: 13.0
-  Lesotho: 13.9
-  Liberia: 39.0
-  Libya: 12.6
-  Liechtenstein: 9.5
-  Lithuania: 9.5
-  Luxembourg: 12.1
-  Madagascar: 11.3
-  Malawi: 17.2
-  Malaysia: 12.0
-  Maldives: 39.4
-  Mali: 14.2
-  Malta: 19.0
-  Marshall Islands: 40.6
-  Mauritania: 17.6
-  Mauritius: 20.5
-  Mexico: 16.5
-  Micronesia, Fed, Sts,: 41.4
-  Moldova: 8.5
-  Mongolia: 5.6
-  Montenegro: 14.1
-  Morocco: 12.4
-  Mozambique: 9.6
-  Myanmar: 8.1
-  Namibia: 15.1
-  Nepal: 12.0
-  Netherlands: 14.4
-  New Zealand: 12.0
-  Nicaragua: 33.4
-  Niger: 21.3
-  Nigeria: 11.9
-  North Macedonia: 15.5
-  Norway: 10.1
-  Oman: 6.0
-  Pakistan: 21.7
-  Palau: 32.1
-  Panama: 25.4
-  Papua New Guinea: 28.9
-  Paraguay: 6.6
-  Peru: 19.5
-  Philippines: 18.1
-  Poland: 13.7
-  Portugal: 22.2
-  Puerto Rico: 24.3
-  Qatar: 3.7
-  Romania: 9.2
-  Russian Federation: 8.4
-  Rwanda: 13.7
-  Samoa: 38.5
-  San Marino: 15.5
-  São Tomé and Principe: 18.3
-  Saudi Arabia: 7.4
-  Senegal: 18.2
-  Serbia: 10.7
-  Seychelles: 32.1
-  Sierra Leone: 18.0
-  Singapore: 5.5
-  Slovak Republic: 15.6
-  Slovenia: 26.6
-  Solomon Islands: 71.6
-  South Africa: 16.1
-  Spain: 26.0
-  Sri Lanka: 17.3
-  St, Kitts and Nevis: 30.6
-  St, Lucia: 32.1
-  St, Vincent and the Grenadines: 34.6
-  Sudan: 2.4
-  Suriname: 7.2
-  Sweden: 10.4
-  Switzerland: 13.6
-  Syrian Arab Republic: 7.8
-  Taiwan, China: 11.7
-  Tajikistan: 6.3
-  Tanzania: 12.6
-  Thailand: 13.7
-  Timor-Leste: 23.4
-  Togo: 17.6
-  Tonga: 36.2
-  Trinidad and Tobago: 6.6
-  Tunisia: 7.7
-  Turkey: 8.9
-  Uganda: 16.9
-  Ukraine: 6.4
-  United Arab Emirates: 10.9
-  United Kingdom: 17.7
-  United States: 18.1
-  Uruguay: 16.7
-  Uzbekistan: 5.2
-  Vanuatu: 38.2
-  Venezuela, RB: 123.8
-  Vietnam: 12.5
-  West Bank and Gaza: 17.6
-  Zambia: 4.6
-  Zimbabwe: 12.4
+AFG: 18.0
+AGO: 3.7
+ALB: 9.4
+ARE: 10.9
+ARG: 10.8
+ARM: 7.7
+ATG: 44.9
+AUS: 20.4
+AUT: 10.2
+AZE: 4.8
+BDI: 17.3
+BEL: 16.7
+BEN: 20.7
+BFA: 23.8
+BGD: 9.7
+BGR: 10.7
+BHR: 6.0
+BHS: 28.5
+BIH: 11.6
+BLR: 14.7
+BLZ: 22.6
+BOL: 17.5
+BRA: 17.5
+BRB: 26.6
+BRN: 5.0
+BTN: 5.9
+BWA: 16.3
+CAF: 10.5
+CAN: 12.3
+CHE: 13.6
+CHL: 10.2
+CHN: 14.6
+CIV: 12.6
+CMR: 17.0
+COD: 10.0
+COG: 8.1
+COL: 19.9
+COM: 28.1
+CPV: 26.3
+CRI: 14.4
+CYP: 19.1
+CZE: 13.8
+DEU: 25.6
+DJI: 26.2
+DMA: 36.8
+DNK: 24.2
+DOM: 20.1
+DZA: 2.1
+ECU: 11.9
+EGY: 9.7
+ESP: 26.0
+EST: 10.3
+ETH: 3.6
+FIN: 13.3
+FJI: 21.8
+FRA: 13.6
+FSM: 41.4
+GAB: 19.1
+GBR: 17.7
+GEO: 6.6
+GHA: 23.6
+GIN: 20.3
+GMB: 20.2
+GNB: 27.3
+GNQ: 17.4
+GRC: 20.4
+GRD: 30.9
+GTM: 20.1
+GUY: 32.8
+HKG: 16.1
+HND: 20.8
+HRV: 16.8
+HTI: 21.1
+HUN: 18.0
+IDN: 10.9
+IND: 18.2
+IRL: 19.0
+IRN: 5.2
+IRQ: 8.5
+ISL: 12.2
+ISR: 11.8
+ITA: 16.8
+JAM: 26.4
+JOR: 24.6
+JPN: 21.2
+KAZ: 4.4
+KEN: 21.7
+KGZ: 3.6
+KHM: 18.2
+KIR: 41.3
+KNA: 30.6
+KOR: 11.4
+KWT: 0.7
+LAO: 13.2
+LBN: 13.0
+LBR: 39.0
+LBY: 12.6
+LCA: 32.1
+LIE: 9.5
+LKA: 17.3
+LSO: 13.9
+LTU: 9.5
+LUX: 12.1
+LVA: 11.4
+MAR: 12.4
+MDA: 8.5
+MDG: 11.3
+MDV: 39.4
+MEX: 16.5
+MHL: 40.6
+MKD: 15.5
+MLI: 14.2
+MLT: 19.0
+MMR: 8.1
+MNE: 14.1
+MNG: 5.6
+MOZ: 9.6
+MRT: 17.6
+MUS: 20.5
+MWI: 17.2
+MYS: 12.0
+NAM: 15.1
+NER: 21.3
+NGA: 11.9
+NIC: 33.4
+NLD: 14.4
+NOR: 10.1
+NPL: 12.0
+NZL: 12.0
+OMN: 6.0
+PAK: 21.7
+PAN: 25.4
+PER: 19.5
+PHL: 18.1
+PLW: 32.1
+PNG: 28.9
+POL: 13.7
+PRI: 24.3
+PRT: 22.2
+PRY: 6.6
+PSE: 17.6
+QAT: 3.7
+ROU: 9.2
+RUS: 8.4
+RWA: 13.7
+SAU: 7.4
+SDN: 2.4
+SEN: 18.2
+SGP: 5.5
+SLB: 71.6
+SLE: 18.0
+SLV: 19.5
+SMR: 15.5
+SRB: 10.7
+STP: 18.3
+SUR: 7.2
+SVK: 15.6
+SVN: 26.6
+SWE: 10.4
+SWZ: 16.5
+SYC: 32.1
+SYR: 7.8
+TCD: 21.2
+TGO: 17.6
+THA: 13.7
+TJK: 6.3
+TLS: 23.4
+TON: 36.2
+TTO: 6.6
+TUN: 7.7
+TUR: 8.9
+TWN: 11.7
+TZA: 12.6
+UGA: 16.9
+UKR: 6.4
+URY: 16.7
+USA: 18.1
+UZB: 5.2
+VCT: 34.6
+VEN: 123.8
+VNM: 12.5
+VUT: 38.2
+WSM: 38.5
+XKX: 9.5
+ZAF: 16.1
+ZMB: 4.6
+ZWE: 12.4
