Remove obsolete data files and update criteria weights in YAML configurations

--- a/data/ratio_import_electricite.yaml
+++ b/data/ratio_import_electricite.yaml
@@ -5,113 +5,113 @@ ARE: None
 ARG: None
 ARM: None
 ATG: None
-AUS: None
-AUT: -8.65
+AUS: -0.0
+AUT: 0.3954613331
 AZE: None
 BDI: None
-BEL: -11.98
-BEN: -28.09
+BEL: 0.2092163522
+BEN: None
 BFA: None
-BGD: -25.74
+BGD: None
 BGR: None
-BHR: -28.84
+BHR: None
 BHS: None
 BIH: None
 BLR: None
 BLZ: None
 BOL: None
 BRA: None
-BRB: -26.45
+BRB: None
 BRN: None
 BTN: None
 BWA: None
 CAF: None
-CAN: 4.22
-CHE: None
-CHL: None
+CAN: 0.02502115236
+CHE: 0.5366627299
+CHL: 0.004063932135
 CHN: None
 CIV: None
 CMR: None
 COD: None
 COG: None
-COL: None
+COL: 0.004356889321
 COM: None
 CPV: None
-CRI: None
+CRI: 0.00641023056
 CYP: None
-CZE: None
-DEU: None
+CZE: 0.2162128799
+DEU: 0.08788272603
 DJI: None
 DMA: None
-DNK: None
-DOM: -24.57
+DNK: 0.4872120633
+DOM: None
 DZA: None
 ECU: None
 EGY: None
 ERI: None
-ESP: None
-EST: -6.9
+ESP: 0.0600530046
+EST: 0.577008976
 ETH: None
-FIN: -3.24
-FJI: -24.98
-FRA: None
+FIN: 0.2373940109
+FJI: None
+FRA: 0.04183410695
 FSM: None
 GAB: None
-GBR: None
-GEO: -9.92
-GHA: -27.73
+GBR: 0.06891307742
+GEO: None
+GHA: None
 GIN: None
-GMB: -28.46
+GMB: None
 GNB: None
 GNQ: None
-GRC: None
+GRC: 0.1618519798
 GRD: None
-GTM: -23.77
+GTM: None
 GUY: None
 HKG: None
 HND: None
 HRV: None
 HTI: None
-HUN: None
+HUN: 0.4625229112
 IDN: None
 IND: None
-IRL: None
+IRL: 0.07324370428
 IRN: None
 IRQ: None
-ISL: None
+ISL: -0.0
 ISR: None
-ITA: None
-JAM: -26.02
-JOR: -19.77
-JPN: None
+ITA: 0.1564549314
+JAM: None
+JOR: None
+JPN: -0.0
 KAZ: None
-KEN: -25.22
+KEN: None
 KGZ: None
-KHM: -27.25
+KHM: None
 KIR: None
 KNA: None
-KOR: -12.76
+KOR: -0.0
 KWT: None
 LAO: None
 LBN: None
-LBR: -25.47
-LBY: -22.8
+LBR: None
+LBY: None
 LCA: None
-LIE: -9.05
+LIE: None
 LKA: None
-LSO: -12.64
-LTU: None
-LUX: None
-LVA: None
+LSO: None
+LTU: 0.9802710534
+LUX: 1.121822909
+LVA: 0.7087608862
 MAR: None
 MDA: None
 MDG: None
-MDV: -28.08
-MEX: -21.7
+MDV: None
+MEX: 0.009755971787
 MHL: None
 MKD: None
-MLI: -29.19
-MLT: -20.26
+MLI: None
+MLT: None
 MMR: None
 MNE: None
 MNG: None
@@ -123,69 +123,69 @@ MYS: None
 NAM: None
 NER: None
 NGA: None
-NIC: -25.81
-NLD: None
-NOR: None
+NIC: None
+NLD: 0.2154590629
+NOR: 0.0756866896
 NPL: None
-NZL: None
+NZL: -0.0
 OMN: None
 PAK: None
 PAN: None
 PER: None
 PHL: None
-PLW: -27.54
+PLW: None
 PNG: None
-POL: -9.7
+POL: 0.09258449573
 PRI: None
-PRT: None
+PRT: 0.1749906464
 PRY: None
 PSE: None
 QAT: None
 ROU: None
-RUS: 2.87
+RUS: None
 RWA: None
 SAU: None
 SDN: None
-SEN: -29.0
+SEN: None
 SGP: None
-SLB: -25.89
+SLB: None
 SLE: None
 SLV: None
 SMR: None
 SOM: None
 SRB: None
-SSD: -27.55
+SSD: None
 STP: None
 SUR: None
-SVK: None
-SVN: None
-SWE: -3.84
+SVK: 0.5104262535
+SVN: 0.6500161306
+SWE: 0.08371115653
 SWZ: None
 SYC: None
 SYR: None
-TCD: -27.28
+TCD: None
 TGO: None
-THA: -26.78
+THA: None
 TJK: None
 TLS: None
-TON: -25.1
-TTO: -26.46
+TON: None
+TTO: None
 TUN: None
-TUR: None
+TUR: 0.01891686162
 TWN: None
-TZA: -22.9
+TZA: None
 UGA: None
 UKR: None
-URY: -17.73
-USA: -9.73
-UZB: -14.86
+URY: None
+USA: 0.0148422255
+UZB: None
 VCT: None
 VEN: None
-VNM: -24.73
-VUT: -24.76
+VNM: None
+VUT: None
 WSM: None
 XKX: None
 YEM: None
 ZAF: None
-ZMB: -21.92
-ZWE: -21.83
+ZMB: None
+ZWE: None
