--- a/data/ratio_pertes_distribution.yaml
+++ b/data/ratio_pertes_distribution.yaml
@@ -5,113 +5,113 @@ ARE: None
 ARG: None
 ARM: None
 ATG: None
-AUS: None
-AUT: -8.65
+AUS: -0.05192091906
+AUT: -0.05231553713
 AZE: None
 BDI: None
-BEL: -11.98
-BEN: -28.09
+BEL: -0.04571407934
+BEN: None
 BFA: None
-BGD: -25.74
+BGD: None
 BGR: None
-BHR: -28.84
+BHR: None
 BHS: None
 BIH: None
 BLR: None
 BLZ: None
 BOL: None
 BRA: None
-BRB: -26.45
+BRB: None
 BRN: None
 BTN: None
 BWA: None
 CAF: None
-CAN: 4.22
-CHE: None
-CHL: None
+CAN: -0.07303218088
+CHE: -0.07840257723
+CHL: -0.05664783471
 CHN: None
 CIV: None
 CMR: None
 COD: None
 COG: None
-COL: None
+COL: -0.08956470397
 COM: None
 CPV: None
-CRI: None
+CRI: -0.1033337507
 CYP: None
-CZE: None
-DEU: None
+CZE: -0.06714737923
+DEU: -0.04992863393
 DJI: None
 DMA: None
-DNK: None
-DOM: -24.57
+DNK: -0.06143646835
+DOM: None
 DZA: None
 ECU: None
 EGY: None
 ERI: None
-ESP: None
-EST: -6.9
+ESP: -0.1079670853
+EST: -0.1128570792
 ETH: None
-FIN: -3.24
-FJI: -24.98
-FRA: None
+FIN: -0.03458351031
+FJI: None
+FRA: -0.08346675362
 FSM: None
 GAB: None
-GBR: None
-GEO: -9.92
-GHA: -27.73
+GBR: -0.1009405765
+GEO: None
+GHA: None
 GIN: None
-GMB: -28.46
+GMB: None
 GNB: None
 GNQ: None
-GRC: None
+GRC: -0.07756608367
 GRD: None
-GTM: -23.77
+GTM: None
 GUY: None
 HKG: None
 HND: None
 HRV: None
 HTI: None
-HUN: None
+HUN: -0.08415664784
 IDN: None
 IND: None
-IRL: None
+IRL: -0.08132535441
 IRN: None
 IRQ: None
-ISL: None
+ISL: -0.02975822315
 ISR: None
-ITA: None
-JAM: -26.02
-JOR: -19.77
-JPN: None
+ITA: -0.06452586162
+JAM: None
+JOR: None
+JPN: -0.04574274474
 KAZ: None
-KEN: -25.22
+KEN: None
 KGZ: None
-KHM: -27.25
+KHM: None
 KIR: None
 KNA: None
-KOR: -12.76
+KOR: -0.03585122313
 KWT: None
 LAO: None
 LBN: None
-LBR: -25.47
-LBY: -22.8
+LBR: None
+LBY: None
 LCA: None
-LIE: -9.05
+LIE: None
 LKA: None
-LSO: -12.64
-LTU: None
-LUX: None
-LVA: None
+LSO: None
+LTU: -0.08300550719
+LUX: -0.02422768761
+LVA: -0.07175605502
 MAR: None
 MDA: None
 MDG: None
-MDV: -28.08
-MEX: -21.7
+MDV: None
+MEX: -0.154391474
 MHL: None
 MKD: None
-MLI: -29.19
-MLT: -20.26
+MLI: None
+MLT: None
 MMR: None
 MNE: None
 MNG: None
@@ -123,69 +123,69 @@ MYS: None
 NAM: None
 NER: None
 NGA: None
-NIC: -25.81
-NLD: None
-NOR: None
+NIC: None
+NLD: -0.04630067002
+NOR: -0.06197532355
 NPL: None
-NZL: None
+NZL: -0.07532259698
 OMN: None
 PAK: None
 PAN: None
 PER: None
 PHL: None
-PLW: -27.54
+PLW: None
 PNG: None
-POL: -9.7
+POL: -0.06798306004
 PRI: None
-PRT: None
+PRT: -0.1012529914
 PRY: None
 PSE: None
 QAT: None
 ROU: None
-RUS: 2.87
+RUS: None
 RWA: None
 SAU: None
 SDN: None
-SEN: -29.0
+SEN: None
 SGP: None
-SLB: -25.89
+SLB: None
 SLE: None
 SLV: None
 SMR: None
 SOM: None
 SRB: None
-SSD: -27.55
+SSD: None
 STP: None
 SUR: None
-SVK: None
-SVN: None
-SWE: -3.84
+SVK: -0.04667775274
+SVN: -0.06579836245
+SWE: -0.07316859106
 SWZ: None
 SYC: None
 SYR: None
-TCD: -27.28
+TCD: None
 TGO: None
-THA: -26.78
+THA: None
 TJK: None
 TLS: None
-TON: -25.1
-TTO: -26.46
+TON: None
+TTO: None
 TUN: None
-TUR: None
+TUR: -0.1370046665
 TWN: None
-TZA: -22.9
+TZA: None
 UGA: None
 UKR: None
-URY: -17.73
-USA: -9.73
-UZB: -14.86
+URY: None
+USA: -0.05944472055
+UZB: None
 VCT: None
 VEN: None
-VNM: -24.73
-VUT: -24.76
+VNM: None
+VUT: None
 WSM: None
 XKX: None
 YEM: None
 ZAF: None
-ZMB: -21.92
-ZWE: -21.83
+ZMB: None
+ZWE: None
